# ecommerce_seller

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sources.example.json  trends.json
designs/: manifest.example.json
docs/: ADSUITE_BACKLOG.md  BACKLOG.md  GROWTH_BACKLOG.md  ONBOARDING.md  PROJECT_OVERVIEW.md  USAGE.md
src/adsuite/: __init__.py  bridge.py  cli.py  config.py  creative.py  experiment.py  models.py  policy.py  report.py  store.py
src/etsyshop/: __init__.py  analytics.py  cli.py  config.py  design.py  doctor.py  engine.py  enrich.py  fulfill.py  growth.py  growth_live.py  ideate.py  imagegen.py  imageqc.py  imagestd.py  inventory.py  logging_setup.py  mockups.py  models.py  optimize.py  orders.py  pipeline.py  pricing.py  profit.py  publisher.py  retry.py  store.py  (+4 more)
templates/: tshirt.example.json
tests/: test_adsuite_experiment.py  test_adsuite_foundation.py  test_adsuite_ops.py  test_adsuite_organic.py  test_adsuite_paid.py  test_clients.py  test_dashboard.py  test_doctor.py  test_engine.py  test_enrich.py  test_fixtures.py  test_fulfill.py  test_growth.py  test_growth_live.py  test_imagestd.py  test_imaging.py  test_inventory_logging.py  test_optimize.py  test_orders.py  test_pipeline.py  test_pricing.py  test_profit.py  test_publish_plan.py  test_publisher.py  test_resilience.py  test_shop_analytics.py  test_shopkit.py  test_shopkit_adsuite.py  test_shopkit_growth.py  test_smoke.py  test_trends.py  test_trendscanner.py  test_trendscanner_pipeline.py  test_trendscanner_sources.py
(+34 files in other folders)
