[project]
name = "etsyshop"
version = "0.1.0"
description = "Automate Etsy POD via Printify: bulk product creation, AI listing optimization, order ops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",
]

[project.scripts]
etsyshop = "etsyshop.cli:app"

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etsyshop"]

[tool.ruff]
line-length = 100
target-version = "py311"
